--- a/client/src/components/PianoKeyboard/PianoKeyboard.module.css
+++ b/client/src/components/PianoKeyboard/PianoKeyboard.module.css
@@ -1,9 +1,30 @@
 .keyboard {
   position: relative;
   width: 100%;
+  height: 12vh;
+  min-height: 80px;
+  max-height: 150px;
   background: var(--ctp-crust);
   overflow: hidden;
   user-select: none;
+}
+
+/* Smaller keyboard on mobile */
+@media (max-width: 768px) {
+  .keyboard {
+    height: 10vh;
+    min-height: 60px;
+    max-height: 100px;
+  }
+}
+
+/* Even smaller on very small screens */
+@media (max-height: 500px) {
+  .keyboard {
+    height: 15vh;
+    min-height: 50px;
+    max-height: 80px;
+  }
 }
 
 .keyboard::before {
